--- a/src/app/pages/exibicao/exibicao.component.html
+++ b/src/app/pages/exibicao/exibicao.component.html
@@ -6,8 +6,8 @@
     <span>Voltar</span>
   </button>
   <div class="content">
-    <h1>Captura</h1>
-    <p>Soluções avançadas de captura de conteúdo para broadcast</p>
+    <h1>Exibição</h1>
+    <p>Sistemas profissionais de TOVA e automação para transmissão broadcast</p>
     
     <section class="panels-section">
       @for (panel of panels; track panel.id) {
