Renomeia Akani AutomaÃ§Ã£o para Akani REKOVE, ajusta mensagem de boas-vindas em mobile e oculta copyright no footer mobile

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -72,6 +72,10 @@
     text-align: center;
   }
 
+  .copyright {
+    display: none; /* Oculta a linha de copyright em telas de celular */
+  }
+
   .social-icons {
     justify-content: center;
   }
