--- a/src/app/pages/exibicao/exibicao.component.html
+++ b/src/app/pages/exibicao/exibicao.component.html
@@ -7,7 +7,7 @@
   </button>
   <div class="content">
     <h1>Exibição</h1>
-    <p>Sistemas profissionais de TOVA e automação para transmissão broadcast</p>
+    <p>Sistemas profissionais de exibição e automação para transmissão broadcast</p>
     
     <section class="panels-section">
       @for (panel of panels; track panel.id) {
