--- a/src/app/pages/gerenciamento-conteudo/akani-arquivo/akani-arquivo.component.html
+++ b/src/app/pages/gerenciamento-conteudo/akani-arquivo/akani-arquivo.component.html
@@ -7,7 +7,7 @@
   </button>
   <div class="product-header">
     <div class="product-image">
-      <img src="/assets/images/arquivo.png" alt="Akani PYTA" />
+      <img src="/assets/images/akani-pyta.png" alt="Akani PYTA" />
     </div>
     <div class="product-info">
       <h1>Akani PYTA</h1>
@@ -35,7 +35,8 @@
         <li>Relatórios e auditoria de conteúdo arquivado</li>
         <li>Escrita e leitura em formato SAIT (Sony Advanced Intelligent Tape)</li>
         <li>Escrita e leitura em formato LTO (Linear Tape-Open)</li>
-        <li>Escrita e leitura em formato BlueDisc</li>
+        <li>Escrita e leitura em formato Blu-Ray Disc</li>
+        <li>Escrita e leitura em formato Sony ODA (Optical Disc Archive)</li>
         <li>Escrita e leitura a partir da AWS S3</li>
       </ul>
     </section>
